--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,19 @@ openai-whisper = "*"
 pandas = "*"
 streamlit = "*"
 pyaudioanalysis = "*"
+matplot = "*"
+scipy = "*"
+scikit-learn = "*"
+hmmlearn = "*"
+eyed3 = "*"
+pydub = "*"
+imblearn = "*"
+plotly = "*"
+"pyannote.audio" = "*"
+torchvision = "*"
+sounddevice = "*"
+diart = "*"
+ffmpeg = "*"
 
 [dev-packages]
 
