--- a/Pipfile
+++ b/Pipfile
@@ -4,25 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyaudio = "*"
+ffmpeg = "*"
+matplot = "*"
 numpy = "*"
 openai-whisper = "*"
 pandas = "*"
-streamlit = "*"
-pyaudioanalysis = "*"
-matplot = "*"
+plotly = "*"
+pyaudio = "*"
+pydub = "*"
 scipy = "*"
 scikit-learn = "*"
-hmmlearn = "*"
-eyed3 = "*"
-pydub = "*"
-imblearn = "*"
-plotly = "*"
-"pyannote.audio" = "*"
-torchvision = "*"
 sounddevice = "*"
-diart = "*"
-ffmpeg = "*"
+streamlit = "*"
+torchvision = "*"
+wavio = "*"
+"pyannote.audio" = "*"
 
 [dev-packages]
 
